BACK_file_[ADD]_[invoice]_[PDF GENERATION] : generate a pdf and load it to aws WITHOUT any LOCAL storage
